# gtest-example

./: CMakeLists.txt
inc/: myint.h
src/: main.cpp  myint.cpp
test/: gtest_myint.cpp
